Name:		jobqueue-sender
Version:	0.1.999
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8


Executable jobsender
  Main-is: jobsender.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 cmdargs == 0.9.*,
                 jobqueue-sender
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 containers, 
                 mtl == 2.* , 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*, 
                 aeson == 0.6.*, 
                 ghc-paths == 0.1.*,
                 http-conduit == 1.4.*, 
                 http-types == 0.6.*, 
                 jobqueue-common >= 0.2.999 && < 0.3, 
                 jobqueue-client >= 0.1.999 && < 0.3, 
                 cmdargs == 0.9.*, 
                 parsec, 
                 pipeline > 0.3, 
                 filepath, ghc, webdav-manager, HEPUtil >= 0.1
                 
  Exposed-Modules: HEP.Automation.JobQueue.Sender.Command, 
                   HEP.Automation.JobQueue.Sender.Job, 
                   -- HEP.Automation.JobQueue.Sender.Plugins, 
                   HEP.Automation.JobQueue.Sender.Type

		 
